<resources>
    <string name="app_name">NOA</string>

    <string name="text_hint_firstname">Vorname</string>
    <string name="text_hint_lastname">Nachname</string>
    <string name="text_hint_email">E-Mail</string>
    <string name="text_hint_password">Passwort</string>
    <string name="place_holder_image">place_holder_image</string>
    <string name="text_button_register">Registrieren</string>
    <string name="text_button_logout">Ausloggen</string>
    <string name="text_button_login">Einloggen</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_placeholder_name">Vorname Nachname</string>
    <string name="text_menu_item_login">Einloggen</string>
    <string name="text_menu_item_register">Registrieren</string>
    <string name="text_menu_item_settings">Einstellungen</string>
    <string name="text_menu_item_logout">Ausloggen</string>
    <string name="missing_creds">Bitte fülle alle Felder aus</string>
    <string name="invalid_email">Bitte benutze eine gültige Email</string>
    <string name="user_registered">Neuer Benutzer wurde registriert</string>
    <string name="firstname_too_long">Vorname darf nicht länger wie 50 Zeichen sein</string>
    <string name="lastname_too_long">Nachname darf nicht länger wie 50 Zeichen sein</string>
    <string name="email_too_long">Email darf nicht länger wie 100 Zeichen sein</string>
    <string name="password_too_simple">Dein Passwort muss mind. 8 Zeichen lang sein, gross- und kleinbuchstaben und eine Zahl sowie ein Spezialzeichen beinhalten</string>
    <string name="wrong_creds">Falsche Logindaten</string>
    <string name="user_exists">User mit dieser Email existiert bereits</string>


</resources>
