<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".register.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/text_field_firstname_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/text_hint_firstname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/text_field_lastname_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/text_hint_lastname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/text_field_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/text_field_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_submit_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/text_button_submit"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>